--- a/index.html
+++ b/index.html
@@ -1,52 +1,10 @@
-<!DOCTYPE html>
 <html>
-  <canvas id='c' width='400' height='400'></canvas>
-  <script>
-    function createShader(str, type)
-    {
-      var shader = gl.createShader(type);
-      gl.shaderSource(shader, str);
-      gl.compileShader(shader);
-      return shader;
-    }
-
-    function createProgram(vstr, fstr)
-    {
-      var program = gl.createProgram();
-      var vshader = createShader(vstr, gl.VERTEX_SHADER);
-      var fshader = createShader(fstr, gl.FRAGMENT_SHADER);
-      gl.attachShader(program, vshader);
-      gl.attachShader(program, fshader);
-      gl.linkProgram(program);
-      return program;
-    }
-
-    var c = document.getElementById('c');
-    var gl = c.getContext('experimental-webgl');
-
-    var vertexPosBuffer = gl.createBuffer();
-    gl.bindBuffer(gl.ARRAY_BUFFER, vertexPosBuffer);
-    //                 x,   y,
-    var vertices = [-0.5, -0.5,
-                     0.5, -0.5,
-                     0.0,  0.5];
-    gl.bufferData(gl.ARRAY_BUFFER, new Float32Array(vertices), gl.STATIC_DRAW);
-    
-    /*
-          /\ 3rd
-         /  \
-    1st /____\ 2nd
-    */
-
-    var vs = 'attribute vec2 pos;' +
-             'void main() { gl_Position = vec4(pos, 0, 1); }';
-    var fs = 'precision mediump float;' +
-             'void main() { gl_FragColor = vec4(9,9.8,0,1); }';
-    var program = createProgram(vs, fs);
-    gl.useProgram(program);
-    program.vertexPosAttrib = gl.getAttribLocation(program, 'pos');
-    gl.enableVertexAttribArray(program.vertexPosAttrib);
-    gl.vertexAttribPointer(program.vertexPosAttrib, 2, gl.FLOAT, false, 0, 0);
-    gl.drawArrays(gl.TRIANGLES, 0, 3);
-  </script>
+<head>
+<title>PhildoGames</title>
+<meta http-equiv="REFRESH" content="0;url=current/" />
+</head>
+<body>
+Redirecting...
+</body>
 </html>
+
