--- a/tests/test_04/index.html
+++ b/tests/test_04/index.html
@@ -1,51 +1,30 @@
 <!DOCTYPE html>
 <html>
-  <canvas id='c' width='900' height='900'></canvas>
+  <canvas id='c' width='400' height='400'></canvas>
   <script src='webgl_utils.js'></script>
   <script id='vshader' type='x-shader'>
     attribute vec2 aVertexPosition;
+    varying vec2 vTexCoord;
+    uniform vec2 uOffset;
     void main()
     {
+      vTexCoord = aVertexPosition + uOffset;
       gl_Position = vec4(aVertexPosition, 0, 1);
     }
   </script>
   <script id='fshader' type='x-shader'>
-    #ifdef GL_FRAGMENT_PRECISION_HIGH
-      precision highp float;
-    #else
-      precision mediump float;
-    #endif
-      precision mediump int;
-
-    uniform vec2 uCanvasSize;
-
-    vec4 calc(vec2 texCoord)
-    {
-      float x = 0.0;
-      float y = 0.0;
-      for(int iteration = 0; iteration < 100; iteration++)
-      {
-        float xTemp = x*x-y*y+texCoord.x;
-        y = 2.0*x*y+texCoord.y;
-        x = xTemp;
-        if(x*x+y*y >= 8.0)
-        {
-          float d = float(iteration) / 20.0;
-          return vec4(d,d,d,1);
-        }
-      }
-      return vec4(0,0,0,1);
-    }
-
+    precision mediump float;
+    varying vec2 vTexCoord;
     void main()
     {
-      vec2 texCoord = (gl_FragCoord.xy/uCanvasSize.xy) * 2.0 - vec2(1.0,1.0);
-      gl_FragColor = calc(texCoord);
+      gl_FragColor = vec4(vTexCoord, 0, 1);
     }
   </script>
   <script>
     var c = document.getElementById('c');
     var gl = c.getContext('experimental-webgl');
+
+    var offset = [1, 1];
 
     var vertexPosBuffer = screenQuad();
 
@@ -54,10 +33,10 @@
     var program = createProgram(vs, fs);
     gl.useProgram(program);
     program.vertexPosAttrib = gl.getAttribLocation(program, 'aVertexPosition');
-    program.canvasSizeUniform = gl.getUniformLocation(program, 'uCanvasSize');
+    program.offsetUniform = gl.getUniformLocation(program, 'uOffset');
     gl.enableVertexAttribArray(program.vertexPosAttrib);
     gl.vertexAttribPointer(program.vertexPosAttrib, vertexPosBuffer.itemSize, gl.FLOAT, false, 0, 0);
-    gl.uniform2f(program.canvasSizeUniform, c.width, c.height);
+    gl.uniform2f(program.offsetUniform, offset[0], offset[1]);
     gl.drawArrays(gl.TRIANGLE_STRIP, 0, vertexPosBuffer.numItems);
   </script>
 </html>
