--- a/tests/test_05/index.html
+++ b/tests/test_05/index.html
@@ -18,20 +18,26 @@
       precision mediump int;
 
     uniform vec2 uCanvasSize;
+    uniform vec2 uOffset;
+    uniform float uScale;
 
     vec4 calc(vec2 texCoord)
     {
       float x = 0.0;
       float y = 0.0;
+      float v = 10000.0;
+      float j = 10000.0;
       for(int iteration = 0; iteration < 100; iteration++)
       {
         float xTemp = x*x-y*y+texCoord.x;
         y = 2.0*x*y+texCoord.y;
         x = xTemp;
+        v = min(v, abs(x*x+y*y));
+        j = min(j, abs(x*y));
         if(x*x+y*y >= 8.0)
         {
-          float d = float(iteration) / 20.0;
-          return vec4(d,d,d,1);
+          float d = (float(iteration) - (log(log(sqrt(x*x+y*y)))) / log(2.0)) / 20.0;
+          return vec4(d+j,d,d+v,1);
         }
       }
       return vec4(0,0,0,1);
@@ -40,13 +46,15 @@
     void main()
     {
       vec2 texCoord = (gl_FragCoord.xy/uCanvasSize.xy) * 2.0 - vec2(1.0,1.0);
+      texCoord = texCoord * uScale + uOffset;
       gl_FragColor = calc(texCoord);
     }
   </script>
   <script>
     var c = document.getElementById('c');
     var gl = c.getContext('experimental-webgl');
-
+    var offset = [-0.5, 0];
+    var scale = 1.35;
     var vertexPosBuffer = screenQuad();
 
     var vs = document.getElementById('vshader').textContent;
@@ -55,9 +63,13 @@
     gl.useProgram(program);
     program.vertexPosAttrib = gl.getAttribLocation(program, 'aVertexPosition');
     program.canvasSizeUniform = gl.getUniformLocation(program, 'uCanvasSize');
+    program.offsetUniform = gl.getUniformLocation(program, 'uOffset');
+    program.scaleUniform = gl.getUniformLocation(program, 'uScale');
     gl.enableVertexAttribArray(program.vertexPosAttrib);
     gl.vertexAttribPointer(program.vertexPosAttrib, vertexPosBuffer.itemSize, gl.FLOAT, false, 0, 0);
     gl.uniform2f(program.canvasSizeUniform, c.width, c.height);
+    gl.uniform2f(program.offsetUniform, offset[0], offset[1]);
+    gl.uniform1f(program.scaleUniform, scale);
     gl.drawArrays(gl.TRIANGLE_STRIP, 0, vertexPosBuffer.numItems);
   </script>
 </html>
